--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>WordPress CAS Server by goblindegook</title>
+    <title>Cassava: A WordPress CAS Server</title>
   </head>
 
   <body>
@@ -18,24 +18,24 @@
       <div class="inner">
 
         <header>
-          <h1>WordPress CAS Server</h1>
+          <h1>Cassava</h1>
           <h2>Central Authentication Service provider as a WordPress plugin.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/goblindegook/wordpress-cas-server/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/goblindegook/wordpress-cas-server/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/goblindegook/wordpress-cas-server" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="https://github.com/goblindegook/wp-cas-server/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/goblindegook/wp-cas-server/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/goblindegook/wp-cas-server" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
 
         <section id="main_content">
-          <p>This plugin allows WordPress to act as a single sign-on authenticator using versions 1.0 and 2.0 of the Central Authentication Service protocol.</p>
+          <p>Cassava allows WordPress to act as a single sign-on authenticator using versions 1.0 and 2.0 of the Central Authentication Service protocol.</p>
 
 <p>That way, users on your WordPress install may be able to access different applications that support the CAS protocol by providing a single set of credentials and without exposing the user's password.</p>
 
-<p><a href="https://travis-ci.org/goblindegook/wordpress-cas-server"><img src="https://travis-ci.org/goblindegook/wordpress-cas-server.svg?branch=master" alt="Build Status"></a></p>
+<p><a href="https://travis-ci.org/goblindegook/wp-cas-server"><img src="https://travis-ci.org/goblindegook/wp-cas-server.svg?branch=master" alt="Build Status"></a></p>
         </section>
 
         <footer>
